--- a/portfolio.html
+++ b/portfolio.html
@@ -27,13 +27,18 @@
         <a class="logo site-nav__logo animate__animated animate__flip" href="./index.html"
           >Web<span class="site-nav__logo--black">Studio</span>
         </a>
+        <button class="burger" type="button" data-menu-button>
+          <svg class="burger--icon" width="40" height="40">
+            <use href="./images/sprite.svg#icon-burger"></use>
+          </svg>
+        </button>
         <nav class="site-nav">
           <ul class="nav">
             <li class="nav__item">
               <a class="nav__link" href="./index.html">Студия</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link nav__link--current" href="./portfolio.html">Портфолио</a>
+              <a class="nav__link nav__link--current" href="">Портфолио</a>
             </li>
             <li class="nav__item"><a class="nav__link" href="/">Контакты</a></li>
           </ul>
@@ -59,11 +64,7 @@
         </ul>
       </div>
 
-      <button class="burger" type="button" data-menu-button>
-        <svg class="burger--icon" width="40" height="40">
-          <use href="./images/sprite.svg#icon-burger"></use>
-        </svg>
-      </button>
+     
       <div class="mobile-menu" data-menu>
         <button class="mobile--close" type="button" data-menu-close>
           <svg width="40" height="40">
