--- a/index.html
+++ b/index.html
@@ -457,8 +457,9 @@
             <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
-                  <use href="./images/sprite.svg#icon-Logo"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-Logo"></use>
+                </svg>
+                </a>
             </li>
 
             <li class="clients__item">
